Feature/persistence (#1)
* Add post and get task entry points. 
* Add acceptance tests
* Add additional acceptance tests for post task
* Add persistence new paradigm
* Solve lint warnings
* Update README.md
